2006-05-01  Johannes Schmid <jhs@cvs.gnome.org>

	* plugins/symbol-broser/an_symbol_view.c:
	Fixed crasher in namespace exploration

2006-05-01  Massimo Cora' <maxcvs@email.it>

	* configure.in:
	* plugins/valgrind/Makefile.am:

	Optional compiling of Valgrind plugin

2006-05-01  Massimo Cora' <maxcvs@email.it>

	* plugins/symbol-browser/an_symbol_view.c:
	- modularized code. Marked with FIXME the parts which need improvement.
	- More comments.
    - Added basic namespace completion for Gtkmm type project:
    - namespace1::MyClass *class;
    - class-> [display]
    - Namespaces must be anyway improved.

2006-05-01  Johannes Schmid <jhs@cvs.gnome.org>

	* plugins/devhelp/plugin.c: 
	Fixed up plugin unloading and show html widget on link selected
	
	* NEWS: Updated
	
2006-05-01  Johannes Schmid <jhs@cvs.gnome.org>

	* plugins/devhelp/Makefile.am:
	* plugins/devhelp/anjuta-devhelp.plugin.in:
	* plugins/devhelp/htmlview.c:
	* plugins/devhelp/htmlview.h:
	* plugins/devhelp/plugin.c: 
	* plugins/devhelp/plugin.h:
	Reimplemeted devhelp plugin from scratch
	
	* plugins/symbol-browser/an_symbol_view.c: (sv_get_type_of_token):
	Fixed crasher

2006-04-30  Johannes Schmid <jhs@cvs.gnome.org>

	* plugins/sourceview/sourceview-tags.c:
	complete some more tag types
	
	* plugins/valgrind/plugin.c:
	* plugins/valgrind/preferences.c:
	* plugins/valgrind/vggeneralprefs.c:
	
	Fixed lots of gtk warnings

2006-04-29 Johannes Schmid <jhs@cvs.gnome.org>

	* plugins/sourceview/sourceview-scope.c:
	Implemented type-ahead for scope completion

2006-04-28  Johannes Schmid <jhs@cvs.gnome.org>

	* manuals/C/Makefile.am:
	* manuals/Makefile.am:
	* plugins/document-manager/Makefile.am:
	* plugins/project-wizard/templates/anjuta-plugin/Makefile.am:
	* plugins/sourceview/Makefile.am:
	* tagmanager/c.c:
	
	Fixed distcheck
	
	* plugins/class-gen/goc_template_header: G_END_DECLS

2006-05-27  Naba Kumar <naba@gnome.org>

	* (added) scintilla/LexSpice.cxx, scintilla/Editor.cxx,